--- a/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
+++ b/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.targets
@@ -2,21 +2,21 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleMobileAdsAssemblyName>Google.MobileAds, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMobileAdsAssemblyName>
-		<_GoogleMobileAdsId>FAdM-7.24.1</_GoogleMobileAdsId>
+		<_GoogleMobileAdsId>FAdM-7.27.0</_GoogleMobileAdsId>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildRestoreResources Include="_GoogleMobileAdsItems" />
 		<XamarinBuildDownload Include="$(_GoogleMobileAdsId)">
-			<Url>https://dl.google.com/dl/cpdc/08078151dcb54ba9/Google-Mobile-Ads-SDK-7.24.1.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/c40d338a23b6bcc9/Google-Mobile-Ads-SDK-7.27.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 	</ItemGroup>
 	<Target Name="_GoogleMobileAdsItems">
 		<PropertyGroup>
-			<_GoogleMobileAdsFrameworkDir>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\frameworks\GoogleMobileAds.framework</_GoogleMobileAdsFrameworkDir>
+			<_GoogleMobileAdsFrameworkDir>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\frameworks\</_GoogleMobileAdsFrameworkDir>
 		</PropertyGroup>
 		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_GoogleMobileAdsFrameworkDir)\Versions\A\GoogleMobileAds">
+			<RestoreAssemblyResource Include="$(_GoogleMobileAdsFrameworkDir)GoogleMobileAds.framework\GoogleMobileAds">
 				<LogicalName>GoogleMobileAds</LogicalName>
 				<AssemblyName>$(_GoogleMobileAdsAssemblyName)</AssemblyName>
 			</RestoreAssemblyResource>
