--- a/Firebase.Database/samples/DatabaseSample/DatabaseSample/Info.plist
+++ b/Firebase.Database/samples/DatabaseSample/DatabaseSample/Info.plist
@@ -34,5 +34,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
