--- a/Firebase.PerformanceMonitoring/source/Firebase.PerformanceMonitoring/Firebase.PerformanceMonitoring.csproj
+++ b/Firebase.PerformanceMonitoring/source/Firebase.PerformanceMonitoring/Firebase.PerformanceMonitoring.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FirebasePerformanceMonitoring.linkwith.cs" />
     <Compile Include="Loader.cs" />
+    <Compile Include="Extensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
