--- a/Firebase.CloudMessaging/source/Firebase.CloudMessaging/Firebase.CloudMessaging.csproj
+++ b/Firebase.CloudMessaging/source/Firebase.CloudMessaging/Firebase.CloudMessaging.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
