--- a/Firebase.Auth/samples/AuthSample/AuthSample/Info.plist
+++ b/Firebase.Auth/samples/AuthSample/AuthSample/Info.plist
@@ -85,5 +85,7 @@
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
