--- a/Firebase.Auth/samples/AuthSample/AuthSample/Info.plist
+++ b/Firebase.Auth/samples/AuthSample/AuthSample/Info.plist
@@ -45,7 +45,7 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb765057006871425</string>
+				<string>fbYour_App_Id</string>
 			</array>
 			<key>CFBundleURLTypes</key>
 			<string>Editor</string>
