Added logic to enhance the build time * Now pod command will run 'pod repo update' only when a Podfile is modified or when you force it using update|repo-update|pod-repo-update bool argument

--- a/Firebase.Analytics/externals/Makefile
+++ b/Firebase.Analytics/externals/Makefile
@@ -1,11 +1,11 @@
 POD=pod
 
-all: Podfile.lock
+all: Pods
 
-Podfile.lock:
+Pods:
 	$(POD) install
 
 clean:
-	rm -rf Podfile.lock Pods
+	rm -rf Pods
 
 .PHONY: all clean
