--- a/Google.Analytics/externals/Makefile
+++ b/Google.Analytics/externals/Makefile
@@ -1,11 +1,11 @@
 POD=pod
 
-all: Podfile.lock
+all: Pods
 
-Podfile.lock:
+Pods:
 	$(POD) install
 
 clean:
-	rm -rf Podfile.lock Pods
+	rm -rf Pods
 
 .PHONY: all clean
