--- a/Firebase.Crashlytics/source/Firebase.Crashlytics/Firebase.Crashlytics.targets
+++ b/Firebase.Crashlytics/source/Firebase.Crashlytics/Firebase.Crashlytics.targets
@@ -4,6 +4,8 @@
 		<_FirebaseCrashlyticsAssemblyName>Firebase.Crashlytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCrashlyticsAssemblyName>
         <_FirebaseCrashlyticsItemsFolder>FCrshlytcs-3.10.1</_FirebaseCrashlyticsItemsFolder>
 		<_FabricItemsFolder>Fbrc-1.7.5</_FabricItemsFolder>
+        <_FirebaseCrashlyticsScriptsMasterAfterTargets>Build</_FirebaseCrashlyticsScriptsMasterAfterTargets>
+        <_FirebaseCrashlyticsScriptsMasterDependsOnTargets>_FirebaseCrashlyticsRunFabricScript</_FirebaseCrashlyticsScriptsMasterDependsOnTargets>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseCrashlyticsItemsFolder)">
@@ -14,7 +16,7 @@
             <Url>https://kit-downloads.fabric.io/cocoapods/fabric/1.7.5/fabric.zip</Url>
             <Kind>Zip</Kind>
         </XamarinBuildDownload>
-		<XamarinBuildRestoreResources Include="_FirebaseCrashlyticsItems" />
+        <XamarinBuildRestoreResources Include="_FirebaseCrashlyticsItems" />
 	</ItemGroup>
 	<Target Name="_FirebaseCrashlyticsItems">
 
@@ -35,4 +37,12 @@
 		</ItemGroup>
 
 	</Target>
+    <Target Name="_FirebaseCrashlyticsScriptsMasterTarget"
+            Condition="'$(_FirebaseCrashlyticsScriptsMasterDependsOnTargets)'!=''"
+            AfterTargets="$(_FirebaseCrashlyticsScriptsMasterAfterTargets)"
+            DependsOnTargets="$(_FirebaseCrashlyticsScriptsMasterDependsOnTargets)" />
+    <Target Name="_FirebaseCrashlyticsRunFabricScript" >
+        <Message Text="Running Fabric run script located at $(XamarinBuildDownloadDir)$(_FabricItemsFolder)" />
+        <Exec Command="export BUILT_PRODUCTS_DIR=$(MSBuildProjectDirectory)\$(DeviceSpecificOutputPath); export DWARF_DSYM_FILE_NAME=$(AssemblyName).app.dSYM; export DWARF_DSYM_FOLDER_PATH=$(MSBuildProjectDirectory)\$(DeviceSpecificOutputPath); export INFOPLIST_PATH=$(AssemblyName).app/Info.plist; export PROJECT_DIR=$(MSBuildProjectDirectory); export UNLOCALIZED_RESOURCES_FOLDER_PATH=$(AssemblyName).app; $(XamarinBuildDownloadDir)$(_FabricItemsFolder)\run"/>
+    </Target>
 </Project>
