--- a/Firebase.Database/component/component.yaml
+++ b/Firebase.Database/component/component.yaml
@@ -1,4 +1,4 @@
-version: 4.1.3.2
+version: 5.0.0.0
 name: Firebase Database for iOS
 id: firebaseiosdatabase
 publisher: Xamarin Inc.
@@ -12,35 +12,26 @@ docs-url: https://firebase.google.com/docs/database/
 libraries:
   ios-unified:
   - ../output/Firebase.Database.dll
-  - ../../Firebase.Analytics/output/Firebase.Analytics.dll
   - ../../Firebase.Core/output/Firebase.Core.dll
-  - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
 is_shell: true
 packages:
   ios-unified:
-  - Xamarin.Firebase.iOS.Database, Version=4.1.3.2
+  - Xamarin.Firebase.iOS.Database, Version=5.0.0.0
 samples:
 - name: Database Sample
   path: ../samples/DatabaseSample/DatabaseSample.sln
   removeProjects:
   - Firebase.Database
   - Firebase.Auth
-  - Firebase.Analytics
   - Firebase.Core
-  - Firebase.InstanceID
   installNuGets:
   - project: DatabaseSample
     packages:
     - Xamarin.Firebase.iOS.Database
-    - Xamarin.Firebase.iOS.Analytics
-    - Xamarin.Firebase.iOS.Core
-    - Xamarin.Firebase.iOS.InstanceID
     - Xamarin.Firebase.iOS.Auth
-  removeNodes:
-  - //xNS:Import[contains (@Project, 'Firebase.Database.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.Auth.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.Core.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]
+    - Xamarin.Firebase.iOS.Core
 local-nuget-repo: ../../tmp-nugets
 no_build: true
+additional-files:
+- source: ../External-Dependency-Info
+  destination: THIRD-PARTY-NOTICES
