--- a/Firebase.Database/externals/Podfile
+++ b/Firebase.Database/externals/Podfile
@@ -1,36 +1,30 @@
 =begin
 Last run FirebaseDatabase installed:
-- FirebaseAnalytics (4.0.4)
-- FirebaseCore (4.0.8)
-- FirebaseDatabase (4.1.0)
-- FirebaseInstanceID (2.0.4)
-- GoogleToolboxForMac (2.1.3)
-- leveldb-library (1.18.3)
+* Firebase (5.0.0)
+* FirebaseCore (5.0.0)
+* FirebaseDatabase (5.0.0)
+* GoogleToolboxForMac (2.1.4)
+* leveldb-library (1.20)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
-In .targets file, located in Firebase.Database binding, you can find:
-- FirebaseDatabase (4.1.0)
-- leveldb-library (1.18.3)
+In Firebase.Database binding project, you can find the Native Reference of:
+* FirebaseDatabase (5.0.0)
 
-In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (4.0.4)
-
-In .targets file, located in Firebase.Core binding, you can find:
-- FirebaseCore (4.0.8)
-- GoogleToolboxForMac (2.1.3)
-
-In .targets file, located in Firebase.InstanceID binding, you can find:
-- FirebaseInstanceID (2.0.4)
+In Firebase.Core binding project, you can find the Native Reference of:
+* FirebaseCore (5.0.0)
+* GoogleToolboxForMac (2.1.4)
+* leveldb-library (1.20)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
 
-platform :ios, '7.0'
+platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
+use_frameworks!
 
 target 'FirebaseDatabase' do
-	pod 'Firebase/Database', '4.8.0'
+	pod 'Firebase/Database', '5.0.0'
 end
