--- a/Firebase.Database/source/Firebase.Database/Firebase.Database.csproj
+++ b/Firebase.Database/source/Firebase.Database/Firebase.Database.csproj
@@ -34,9 +34,6 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extension.cs" />
-    <Compile Include="FirebaseDatabase.linkwith.cs">
-      <DependentUpon>FirebaseDatabase</DependentUpon>
-    </Compile>
     <Compile Include="Loader.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -46,21 +43,18 @@
     <ObjcBindingCoreSource Include="Structs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
-      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
-      <Name>Firebase.Analytics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
-      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
-      <Name>Firebase.InstanceID</Name>
-    </ProjectReference>
+    <NativeReference Include="..\..\externals\FirebaseDatabase.framework">
+      <Kind>Framework</Kind>
+      <LinkerFlags>-ObjC -lc++ -licucore</LinkerFlags>
+      <Frameworks>CFNetwork Security SystemConfiguration</Frameworks>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
       <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
       <Name>Firebase.Core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Firebase.Database.targets" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
