--- a/Firebase.Storage/component/component.yaml
+++ b/Firebase.Storage/component/component.yaml
@@ -1,4 +1,4 @@
-version: 2.1.1.2
+version: 3.0.0.0
 name: Firebase Storage for iOS
 id: firebaseiosstorage
 publisher: Xamarin Inc.
@@ -12,13 +12,11 @@ docs-url: https://firebase.google.com/docs/storage/
 libraries:
   ios-unified:
   - ../output/Firebase.Storage.dll
-  - ../../Firebase.Analytics/output/Firebase.Analytics.dll
   - ../../Firebase.Core/output/Firebase.Core.dll
-  - ../../Firebase.InstanceID/output/Firebase.InstanceID.dll
 is_shell: true
 packages:
   ios-unified:
-  - Xamarin.Firebase.iOS.Storage, Version=2.1.1.2
+  - Xamarin.Firebase.iOS.Storage, Version=3.0.0.0
 samples:
 - name: Storage Sample
   path: ../samples/StorageSample/StorageSample.sln
@@ -26,24 +24,16 @@ samples:
   - Firebase.Storage
   - Firebase.Database
   - Firebase.Auth
-  - Firebase.Analytics
   - Firebase.Core
-  - Firebase.InstanceID
   installNuGets:
   - project: StorageSample
     packages:
     - Xamarin.Firebase.iOS.Storage
     - Xamarin.Firebase.iOS.Auth
     - Xamarin.Firebase.iOS.Database
-    - Xamarin.Firebase.iOS.Analytics
     - Xamarin.Firebase.iOS.Core
-    - Xamarin.Firebase.iOS.InstanceID
-  removeNodes:
-  - //xNS:Import[contains (@Project, 'Firebase.Storage.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.Database.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.Auth.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.Analytics.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.Core.targets')]
-  - //xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]
 local-nuget-repo: ../../tmp-nugets
 no_build: true
+additional-files:
+- source: ../External-Dependency-Info
+  destination: THIRD-PARTY-NOTICES
