--- a/Firebase.Storage/externals/Podfile
+++ b/Firebase.Storage/externals/Podfile
@@ -1,36 +1,30 @@
 =begin
 Last run FirebaseStorage installed:
-- FirebaseAnalytics (4.0.4)
-- FirebaseCore (4.0.8)
-- FirebaseInstanceID (2.0.4)
-- FirebaseStorage (2.0.2)
-- GTMSessionFetcher (1.1.12)
-- GoogleToolboxForMac (2.1.3)
+* Firebase (5.0.0)
+* FirebaseCore (5.0.0)
+* FirebaseStorage (3.0.0)
+* GTMSessionFetcher (1.1.15)
+* GoogleToolboxForMac (2.1.4)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
-In .targets file, located in Firebase.Storage binding, you can find:
-- FirebaseStorage (2.0.2)
+In Firebase.Storage binding project, you can find the Native Reference of:
+* FirebaseStorage (3.0.0)
 
-In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (4.0.4)
-
-In .targets file, located in Firebase.Core binding, you can find:
-- FirebaseCore (4.0.8)
-- GoogleToolboxForMac (2.1.3)
-- GTMSessionFetcher (1.1.12)
-
-In .targets file, located in Firebase.InstanceID binding, you can find:
-- FirebaseInstanceID (2.0.4)
+In Firebase.Core binding project, you can find the Native Reference of:
+* FirebaseCore (5.0.0)
+* GTMSessionFetcher (1.1.15)
+* GoogleToolboxForMac (2.1.4)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
 
-platform :ios, '7.0'
+platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
+use_frameworks!
 
 target 'FirebaseStorage' do
-	pod 'Firebase/Storage', '4.8.0'
+	pod 'Firebase/Storage', '5.0.0'
 end
