--- a/Firebase.Storage/nuget/Xamarin.Firebase.iOS.Storage.nuspec
+++ b/Firebase.Storage/nuget/Xamarin.Firebase.iOS.Storage.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Xamarin.Firebase.iOS.Storage</id>
     <title>Firebase APIs Storage iOS Library</title>
-    <version>2.1.1.2</version>
+    <version>3.0.0.0</version>
     <authors>Microsoft</authors>
     <owners>Microsoft</owners>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -15,16 +15,12 @@
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.4.11" />
-        <dependency id="Xamarin.Firebase.iOS.Analytics" version="5.0.0.0" />
-        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="3.0.0.0" />
         <dependency id="Xamarin.Firebase.iOS.Core" version="5.0.0.0" />
       </group>
     </dependencies>
   </metadata>
   <files>
     <file src="output/Firebase.Storage.dll" target="lib/Xamarin.iOS10" />
-
-    <!-- Add targets file for external native reference download -->
-    <file src="source/Firebase.Storage/Firebase.Storage.targets" target="build/Xamarin.Firebase.iOS.Storage.targets" />
+    <file src="External-Dependency-Info" target="THIRD-PARTY-NOTICES" />
   </files>
 </package>
