--- a/Firebase.RemoteConfig/externals/Podfile
+++ b/Firebase.RemoteConfig/externals/Podfile
@@ -1,13 +1,14 @@
 =begin
 Last run FirebaseRemoteConfig installed:
-* Firebase (5.4.0)
+* Firebase (5.7.0)
 * FirebaseABTesting (2.0.0)
-* FirebaseAnalytics (5.0.1)
-* FirebaseCore (5.0.5)
-* FirebaseInstanceID (3.1.1)
-* FirebaseRemoteConfig (3.0.0)
-* GoogleToolboxForMac (2.1.4)
-* Protobuf (3.6.0)
+* FirebaseAnalytics (5.1.1)
+* FirebaseCore (5.1.2)
+* FirebaseInstanceID (3.2.1)
+* FirebaseRemoteConfig (3.0.1)
+* GoogleAppMeasurement (5.1.2)
+* GoogleUtilities (5.2.2)
+* Protobuf (3.6.1)
 * nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
@@ -15,21 +16,22 @@ If yes, please, update *.targets files located in binding
 projects, also, update Podfile files if needed.
 
 In Firebase.RemoteConfig binding project, you can find the .targets file of:
-* FirebaseRemoteConfig (3.0.0)
+* FirebaseRemoteConfig (3.0.1)
 
 In Firebase.ABTesting binding project, you can find the .targets file of:
 * FirebaseABTesting (2.0.0)
 
 In Firebase.Analytics binding project, you can find the .targets file of:
-* FirebaseAnalytics (5.0.1)
+* FirebaseAnalytics (5.1.1)
+* GoogleAppMeasurement (5.1.2)
 
 In Firebase.InstanceID binding project, you can find the .targets file of:
-* FirebaseInstanceID (3.1.1)
+* FirebaseInstanceID (3.2.1)
 
 In Firebase.Core binding project, you can find the Native Reference of:
-* FirebaseCore (5.0.5)
-* GoogleToolboxForMac (2.1.4)
-* Protobuf (3.6.0)
+* FirebaseCore (5.1.2)
+* GoogleUtilities (5.2.2)
+* Protobuf (3.6.1)
 * nanopb (0.3.8)
 =end
 
@@ -39,5 +41,5 @@ platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseRemoteConfig' do
-	pod 'Firebase/RemoteConfig', '5.4.0'
+	pod 'Firebase/RemoteConfig', '5.7.0'
 end
