--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,10 +42,10 @@ jobs:
         dependsOn: [ 'build' ]
         condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
 
+  - ${{ if and(eq(variables['System.TeamProject'], 'devdiv'), startsWith(variables['Build.SourceBranch'], 'refs/tags/')) }}:
     - template: compliance/sbom/job.v1.yml@internal-templates
       parameters:
         artifactNames: ['nuget-signed']
         packageName: 'Xamarin Google APIs Components for iOS'
         packageFilter: '*.nupkg'
         dependsOn: [ 'signing' ]
-        condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
