--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ jobs:
         dependsOn: [ 'build' ]
         condition: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
 
-    - template: compliance/sbom/job.v1.yml@internal-templates
+    - template: compliance/sbom/job.v1.yml@internal-templates                 # Software Bill of Materials (SBOM): https://eng.ms/docs/cloud-ai-platform/devdiv/one-engineering-system-1es/1es-docs/secure-supply-chain/ado-sbom-generator
       parameters:
         packageName: 'Xamarin Google APIs Components for iOS'
         packageFilter: '*.nupkg'
